--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -62,23 +62,15 @@
       ></path>
     </svg>
   </a>
-  <a
-    href="/Nour_Jandali_Resume.pdf"
-    target="_blank"
-    class="mx-3"
-    aria-label="Resume"
-    title="Resume"
-    download
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="24"
-      height="24"
-      viewBox="0 0 448 512"
-      ><path
-        fill="#9ca3af"
-        d="M48 32C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48H48zm98.88 133.234c19.636 0 37.082 6.789 49.929 16.971c11.88 9.452 17.444 18.907 22.298 27.393l-33.923 16.949c-2.427-5.565-5.347-11.387-12.846-17.682c-8.248-6.552-16.478-8.484-23.524-8.484c-27.626 0-42.17 25.693-42.17 54.287c0 37.573 19.161 56.22 42.17 56.22c22.3 0 31.278-15.51 37.08-25.435L219.6 302.66c-6.315 9.926-12.374 19.635-25.95 29.069c-7.262 5.09-23.977 15.037-47.736 15.037C100.586 346.766 64 313.81 64 255.87c0-50.636 34.415-90.637 82.88-90.637zm75.483 5.328h45.565L303.31 292.24l35.125-121.678H384l-59.379 171.112H281.01l-58.647-171.111z"
-      ></path></svg
-    >
-  </a>
 </div>
+
+<a
+  href="/Nour_Jandali_Resume.pdf"
+  target="_blank"
+  aria-label="Resume"
+  title="Resume"
+  class="flex items-center font-semibold px-6 py-2 rounded-lg mb-4 text-center mx-auto justify-center bg-base-300 text-white transition-all duration-300 ease-linear hover:text-base-100 hover:bg-white"
+  download
+>
+  Download CV
+</a>
