--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
+import articleOne from "../../../public/article-1.jpeg";
+import articleTwo from "../../../public/article-2.jpeg";
 
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("blog");
@@ -16,31 +18,30 @@ const { page } = Astro.props;
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Blog</div>
   </div>
+  <ul>
+    <HorizontalCard
+      title="Building a Telegram Bot with Supabase Edge Functions"
+      img={articleOne}
+      desc="A quick guide to build your Telegram Bot using Supabase"
+      url="https://blog.nourjandali.com/building-a-telegram-bot-with-supabase-edge-functions"
+      target="_self"
+      readingTime="4 min"
+      datePublished="Sep 11, 2023"
+      isBlogPage={true}
+    />
+    <div class="divider my-0"></div>
 
-  {
-    page.data.length === 0 ? (
-      <div class="bg-base-200 border-l-4 border-secondary w-full p-4 min-w-full">
-        <p class="font-bold">Sorry!</p>
-        <p>There are no blog posts to show at the moment. Check back later!</p>
-      </div>
-    ) : (
-      <ul>
-        {page.data.map((post) => (
-          <>
-            <HorizontalCard
-              title={post.data.title}
-              img={post.data.heroImage}
-              desc={post.data.description}
-              url={"/blog/" + post.slug}
-              target="_self"
-              badge={post.data.badge}
-            />
-            <div class="divider my-0" />
-          </>
-        ))}
-      </ul>
-    )
-  }
+    <HorizontalCard
+      title="Meet Your Automated Content Creator: A Telegram Bot Powered by AI"
+      img={articleTwo}
+      desc="A guide to integrate OpenAI's API with Supabase to create a Telegram Bot that generates social media content for you"
+      url="https://blog.nourjandali.com/meet-your-automated-content-creator-a-telegram-bot-powered-by-supabase-and-openai"
+      target="_self"
+      readingTime="11 min"
+      datePublished="Oct 11, 2023"
+      isBlogPage={true}
+    />
+  </ul>
 
   <div class="flex justify-between">
     {
