--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,14 +25,14 @@ import { Image } from "@astrojs/image/components";
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
       title="Politehnica University of Bucharest"
-      subtitle="Bachelor's Degree in Computer Science and Engineering"
-      date="2019 - 2023"
+      subtitle="Diploma Degree in Romanian Language and Literature"
+      date="2018 - 2019"
     />
 
     <TimeLineElement
       title="Politehnica University of Bucharest"
-      subtitle="Diploma Degree in Romanian Language and Literature"
-      date="2018 - 2019"
+      subtitle="Bachelor's Degree in Computer Science and Engineering"
+      date="2019 - 2023"
     />
   </div>
 
@@ -41,6 +41,19 @@ import { Image } from "@astrojs/image/components";
   </div>
 
   <div class="time-line-container mb-14">
+    <TimeLineElement
+      title="Freelancer"
+      subtitle="Front-End Developer"
+      date="2021 - Present"
+    >
+      <ul class="list-none mb-5">
+        <li>Developed landing pages for clients using Upwork platform.</li>
+        <li class="font-semibold">
+          Technologies: HTML, TailwindCSS, Javascript, GatsbyJS, Astro
+        </li>
+      </ul>
+    </TimeLineElement>
+
     <TimeLineElement
       title="Bytes & Bots"
       subtitle="Intern Full-Stack Developer"
@@ -54,21 +67,27 @@ import { Image } from "@astrojs/image/components";
           attendance.
         </li>
         <li class="font-semibold">
-          Technologies: HTML, CSS, JavaScript, jQuery, Python, Flask, Jinja,
-          PostgreSQL, Figma
+          Technologies: HTML, CSS, TailwindCSS, JavaScript, jQuery, Python,
+          Flask, Jinja, PostgreSQL, Figma
         </li>
       </ul>
     </TimeLineElement>
 
     <TimeLineElement
-      title="Freelancer"
+      title="Pixellab"
       subtitle="Front-End Developer"
-      date="2021 - Present"
+      date="October 2023 - Present"
     >
       <ul class="list-none">
-        <li>Developed landing pages for clients using Upwork platform.</li>
+        <li>
+          Developed students' check-in system for an educational center. The
+          system is used by students to check-in and check-out of the center.
+          The system is also used by the center's staff to manage students'
+          attendance.
+        </li>
         <li class="font-semibold">
-          Technologies: HTML, TailwindCSS, Javascript, GatsbyJS, Astro
+          Technologies: HTML, CSS, TailwindCSS, JavaScript, React.js, Redux,
+          Next.js.
         </li>
       </ul>
     </TimeLineElement>
